# PvzLast

./: .gitignore  CMakeLists.txt  README.md  config.py  llm_main.py  main.py  optimal_bot.py
.github/: copilot-instructions.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  example
data/: __init__.py  constants.py  offsets.py  plants.py  projectiles.py  zombies.py
docs/: API.md  QUICKSTART.md
engine/: __init__.py  action.py  analyzer.py  optimizer.py  simulator.py  strategy.py  wave_spawner.py
examples/: example_script.cpp
game/: __init__.py  grid.py  lawnmower.py  place_item.py  plant.py  projectile.py  reader.py  state.py  zombie.py
include/: game_data.h  memory_utils.h  pvzlast.h  script_base.h
judge/: __init__.py  collision.py  damage.py  prediction.py
llm/: __init__.py  client.py  config.py  context.py  decoder.py  emergency.py  encoder.py  player.py  prompt.py  validator.py
memory/: __init__.py  injector.py  process.py  reader.py  writer.py
src/core/: pvzlast.cpp
src/memory/: memory_utils.cpp
src/scripts/: script_base.cpp
utils/: __init__.py  damage.py  effects.py  garg.py  logger.py  position.py  spawn.py  timing.py
